@@ -1756,6 +1756,8 @@ static const LuaWrapper::FunctionReg dfhack_units_module[] = {
     WRAPM(Units, isTamable),
     WRAPM(Units, isDomesticated),
     WRAPM(Units, isMarkedForSlaughter),
+    WRAPM(Units, isMarkedForGelding),
+    WRAPM(Units, isGeldable),
     WRAPM(Units, isGelded),
     WRAPM(Units, isEggLayer),
     WRAPM(Units, isGrazer),
@@ -1763,6 +1765,7 @@ static const LuaWrapper::FunctionReg dfhack_units_module[] = {
     WRAPM(Units, isForest),
     WRAPM(Units, isMischievous),
     WRAPM(Units, isAvailableForAdoption),
+    WRAPM(Units, isPet),
     WRAPM(Units, hasExtravision),
     WRAPM(Units, isOpposedToLife),
     WRAPM(Units, isBloodsucker),
